@@ -5,6 +5,7 @@
         Ability to filter by nodes without certain metadata, by type
           or type+value ("everything without a longitude" or 
           "everything not category=Pub")
+        Fix bug in Listing.pm pod output
 
 0.70    6 June 2006
         Feed code has been refactored.
